<resources>
    <string name="app_name">hozuryab</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="name">نام</string>
    <string name="phone">تلفن تماس</string>
    <string name="email">ایمیل</string>
    <string name="sign_up">ثبت نام</string>
    <string name="log_in">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="password">رمز عبور</string>
    <string name="submit">ثبت</string>
    <string name="photo">عکس پرسنلی</string>
    <string name="choose">انتخاب</string>
    <string name="attendee">شرکت کننده</string>
    <string name="controller">مسئول</string>
    <string name="year">سال</string>
    <string name="controllers">مدیران کلاس</string>
    <string name="title_activity_controller_account">Controller_account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addController">افزودن مدیر جدید</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_attendee_account">Attendee_account</string>
    <string name="edit">ویرایش</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="place">مکان</string>
    <string name="class_id">شناسه کلاس</string>
    <string name="class_title">عنوان کلاس</string>
    <string name="space"> </string>
    <string name="addAttendee">افزودن شرکت کننده</string>
    <string name="newSession">جلسه جدید</string>
    <string name="attendeeList">لیست شرکت کنندگان</string>
    <string name="attendee_id">نام کاربری شرکت کننده</string>
    <string name="add_to_class">افزودن به کلاس</string>
    <string name="to"> to</string>
    <string name="hour">ساعت</string>
    <string name="date">تاریخ</string>
    <string name="session_date">تاریخ جلسه را انتخاب کنید :</string>
    <string name="sessions_list">لیست جلسات</string>
    <string name="status">وضعیت</string>
    <string name="todo">todo</string>
    <string name="edate">تاریخ پایان</string>
    <string name="stime">ساعت شروع</string>
    <string name="sdate">تاریخ شروع</string>
    <string name="etime">ساعت پایان</string>
    <string name="sessionsList">لیست حضورغیاب شما در این کلاس</string>
</resources>