<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_Class">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/class_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/class_title"
                tools:ignore="TouchTargetSizeCheck"></EditText>

            <EditText
                android:id="@+id/class_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/class_id"
                tools:ignore="TouchTargetSizeCheck"></EditText>

            <EditText
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/place"
                tools:ignore="TouchTargetSizeCheck"></EditText>

            <EditText
                android:id="@+id/controller_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                tools:ignore="TouchTargetSizeCheck"></EditText>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ساعت شروع"></TextView>
            <TimePicker
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="start time :"
                android:timePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ساعت پایان"></TextView>
            <TimePicker
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="end time :"
                android:timePickerMode="spinner" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="تاریخ شروع"></TextView>
            <DatePicker
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar">

            </DatePicker>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="تاریخ پایان"></TextView>
            <DatePicker
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"></DatePicker>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:id="@+id/submit_class">
            </Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>